<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.info.InfoFragment">


    <TextView
        android:id="@+id/greetingsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/greetings"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/aboutTextView"
        android:text="@string/about_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintTop_toBottomOf="@id/greetingsTextView"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/aboutHallTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hall_text"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/aboutTextView"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/scheduleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/schedule"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/aboutHallTextView" />

    <Button
        android:id="@+id/reviewNavigateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Оставить отзыв"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scheduleTextView"
        app:layout_constraintVertical_bias="0.050000012" />
</androidx.constraintlayout.widget.ConstraintLayout>